--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "whatsapp-ai-bot",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
-      "start": "node whatsapp_server.js",
+      "start": "node index.js",
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
